data/style.css
@font-face {
  font-family: "Constantia-Bold";
  src: url("Constantia.eot?")  format("embedded-opentype"),
       url("Constantia.otf")   format("opentype"),
       url("Constantia.ttf")   format("truetype"),
       url("Constantia.woff2") format("woff2");
}
label, select, option, input, a, button, h1, h2 {
  font-family: "Constantia-Bold";
  font-variant: small-caps;
  font-size: 28px;
  border-radius: 0.5vw;
}

h2 {
  font-size: 18px;
  display: inline-block;
  min-width: 250px;
}

* {
  transition: all 0.5s ease-out;
}

body {
  margin: 0;
}

.title, .title > label {
  font-size: 48px;
}

p, label, h2, a {
  display: inline;
  color: var(--text);
}

line, circle, polygon {
  transition: none;
}

.nav {
  background-color: transparent;
  border: 0px transparent;
}

header {
  border: 1px #767676 solid;
  border-radius: 5px;
  background-color: var(--outer);
  align-self: center;
  display: block;
  margin: 1rem;
}

header i {
  min-width: 50vw;
}

.header-slider {
  width: calc(50% - 2rem);
  margin: 0 1rem;
}

#symboltheme {
  align-self: center;
}

#header-plus-button {
  background-color: transparent;
  border: 0px transparent;
  margin-top: 0.5rem;
}

[class*=list] {
    display: flex;
    justify-content: space-between;
    position: relative;
    align-items: stretch;
}

table {
  table-layout:fixed;
}

#meta {
  max-width: calc(100vw - 4rem);
}

#x-fakebutton {
  width: 62px;
}

#x-fakewrapper {
  position: relative;
  width: 52px;
  padding: 0;
  background-color: var(--outer);
  border-radius: 0.5vw;
  display: block;
  width: 60px;
  height: 60px;
}

#x-fakewrapper table {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 2;
  padding: 0;
  border-spacing: 0;
  margin: 0;
}

#x-fakewrapper td, #x-fakewrapper button {
  padding: 0;
  background-color: transparent;
}

#x-fakesvg {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
}

.editor-screen {
  justify-content: start;
}

.editor-puzzlebox {
  align-self: center;
  justify-content: center;
}

.vlist {
    flex-direction: column;
}

.hlist > div, .vlist > div { /* for ie compat, used to be [class$=list] > div */
    flex: 1 0 auto;
}

.wrapper {
  display: flex;
  flex-direction: column;
  margin: 0;
  justify-content: space-between;
  position: relative;
  align-items: stretch;
  min-height: 100%;
}

.metaButton-wrapper {
  justify-content: space-between;
}

#metaButtons {
  flex: 0 1 auto;
}

.spacer {
  -ms-flex: 999 1 auto !important;
  flex: 999 0 auto !important;
}

.main {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 1rem;
}

.main-wrapper{
  flex: 1 0 auto;
  min-height: 75vh;
}

footer {
  background-color: var(--outer);
  color: var(--inner);
  padding: 16px;
}

footer i {
  color: var(--inner);
}

a { text-decoration: none; }
table { margin: auto; }
.resize { position: absolute; }
body { 
  text-align: center; 
  background-color: var(--background);
}

.loadButtonWrapper, #symboltheme {
  cursor: pointer;
}

@media only screen and (min-width: 1300px) {
  .navbar { height: 60px; }
  .navbar-padding { margin-top: 60px; }
  .navbar-content { padding-top: 0px; }
}
@media only screen and (max-width: 1300px) {
  .navbar { height: 90px; }
  .navbar-padding { margin-top: 90px; }
  .navbar-content { padding-top: 40px; }
  footer {
    height: 60px;
    overflow: hidden;
    transition: 0.25s;
  }
  footer:hover {
    padding: 16px;
    height: 540px;
  }
}
/* https://stackoverflow.com/a/4407335 */
.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

td {
  padding: 2px;
}

/* Slider control main bar */
input[type="range"] {
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  border-radius: 3px;
  height: 15px;
  margin-bottom: 5px;
  margin-top: 5px;
  outline: none;
  width: 100%;
}
/* Slider control icon */
input[type="range"]::-webkit-slider-thumb {
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background: url('slider.png');
  background-size: 17px 33px;
  height: 33px;
  width: 17px;
}
input[type="range"]::-moz-range-thumb {
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background: url('slider.png');
  background-size: 17px 33px;
  height: 33px;
  width: 17px;
}
input[type="range"]::-ms-thumb {
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background: url('slider.png');
  background-size: 17px 33px;
  height: 33px;
  width: 17px;
}

.flashing {
  animation: 1s 1 forwards line-fail !important;
  animation: 0.4s 20 alternate-reverse error;
}

:root {
  --background:#ffffff; /* used to be PAGE_BACKGROUND*/
  --outer:#eeeeee; /* used to be OUTER_BACKGROUND*/
  --inner:#aaaaaa; /* used to be BACKGROUND*/
  --text:#000000;
  --line-undone:#333333; /* used to be FOREGROUND*/
  --line-default:#cccccc;
  --line-success:#ffffff;
  --line-primary:#88ffff;
  --line-secondary:#ffff22;
  /* CANNOT (SHOULD NOT) MODIFY */
  --line-failure: transparent;
  --border: transparent;
  --background-image:none;
  --foreground-image:none;
}

.theme {
  border-radius: 0.5vw;
  border: 1px #767676 solid;
  margin: 16px;
  padding: 8px;
  overflow: hidden;
  transition: height 0.5s;
  background-color: var(--outer);
  color: var(--text);
}

.theme [type=text] {
  border: 1px #767676 solid;
}

body {
  background-image: var(--background-image);
  background-size: cover;
  background-repeat: no-repeat;
}

#symboltheme {
  background-color: var(--inner) !important;
}

li button {
  background-color: var(--inner);
  display: inline-block;
  font-size: 18px;
}

.list-wrapper {
  background-color: var(--outer);
  margin: 1rem;
  padding: 1rem;
  border-radius: 1vw;
  min-width: 80%;
  border: 2px black solid;
}

.list-wrapper button {
  background-color: var(--inner);
}

.elem-wrapper {
  margin: 1rem;
}

.elem {
  max-width: 80%;
  flex: 999 1 auto;
}

.elem-wrapper i {
  font-size: 32px;
  vertical-align: middle;
}

.elem-delete, .elem-insert {
  float: right;
}

.elem-wrapper h2 {
  min-width: unset;
  font-size: 32px;
  vertical-align: middle;
  margin-left: -16px;
}

#progress {
  z-index: -1;
  height: 38px;
  width: 0%;
  background-color: #390;
}

#progressBox {
  display: none;
  width: 220px;
  border: 1px solid black;
  margin-top: 2px;
}

.checkbox {
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: text-bottom;
  margin-right: 6px;
  border: 1.5px var(--text) solid;
  background: var(--background);
  color: var(--text);
}

.sols {
  width: 15px;
  height: 15px;
  border-radius: 50%;
  background-color: var(--line-undone);
  margin: 0 1px;
  transition: background-color 1s;
}

.sols.active {
  background-color: var(--line-default);
}

.sols.perfect {
  width: 0px;
  height: 0px;
  border-radius: 2px;
  background-color: transparent;
  border: 7.5px solid transparent;
  border-bottom: calc(7.5px * 1.732) solid var(--line-undone);
}

.sols.perfect.active {
  background-color: transparent;
  border-bottom-color: var(--line-default);
}

#anchor {
  width: 99%;
  height: 100%;
  position: absolute;
  top: 0;
}

#chooser {
  display: flex;
  position: absolute;
  width: 100%;
  height: 100%;
  min-width: 400px;
  z-index: 1;
}

#chooser-table {
  padding: 25px;
  background-color: var(--inner);
  border: none;
}

.chooser-cell {
  width: 58px;
  height: 58px;
}

.sound-dots-wrapper {
  margin: 32px;
}

.dropzone {
  background-color: var(--inner);
  color: var(--text);
  padding: 8px;
  margin: 8px;
  transition: all 0.2s !important;
}

.theme-button {
  margin: 8px;
  padding: 8px;
}

#prev, #next {
  transition: all 0.2s !important;
}

.symbolButtons-wrapper {
  width: 264px;
  overflow: hidden;
}

#symbolButtons * {
  transition: all 0s !important;
}

